# notwallet

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
_crates/: Cargo.toml  README.md
_crates/src/commands/: asset_price.rs  create_wallet.rs  derive_keypair_default.rs  derive_new_account.rs  import_wallet.rs  sol_balance.rs  wallet_balance.rs  wallet_balance_aggregate.rs
_crates/src/models/: keypair.rs  network_type.rs  wallet.rs
_crates/wallet-constants/: .gitignore  Cargo.toml
_crates/wallet-constants/src/: assets_solana.rs  constants.rs  lib.rs  rpc.rs
_crates/wallet-core/: Cargo.toml
_crates/wallet-core-http/: Cargo.toml
_crates/wallet-core-http/src/: lib.rs
_crates/wallet-core-http/src/price_data/: get_asset_price.rs  get_sol_price.rs  mod.rs
_crates/wallet-core-http/src/xlp/: get_wallet_assets_balance.rs  get_wallet_balance.rs  mod.rs
_crates/wallet-core-model/: Cargo.toml
_crates/wallet-core-model/src/models/: asset.rs  asset_metadata.rs  asset_solana.rs  balance.rs  balance_v1.rs  birdeye_price_response.rs  environment.rs  mod.rs  network.rs
_crates/wallet-core-model/src/models/xlp/: mod.rs  wallet_assets.rs
_crates/wallet-core-network/: Cargo.toml
_crates/wallet-core-network/src/: model.rs
_crates/wallet-core-rpc/: Cargo.toml
_crates/wallet-core-rpc/src/balance/: aggregate_spl_token_balance.rs  mod.rs  sol_balance.rs  spl_balance.rs  spl_token_accounts.rs  spl_token_accounts_for.rs  spl_token_accounts_with_balance.rs
_crates/wallet-core/src/: create_seed_phrase.rs  lib.rs
_crates/wallet-core/src/balance/: mod.rs  wallet_balance.rs  wallet_balance_aggregate.rs  wallet_balance_v1.rs  wallet_token_list.rs
_crates/wallet-kit/: Cargo.toml  FEE_SYSTEM.md  README.md
_crates/wallet-kit/docs/: FEE_SYSTEM.md
_crates/wallet-kit/examples/: fee_demo.rs  sol_balance.rs
_crates/wallet-kit/src/: assets.rs  balance.rs  fee.rs  swap.rs  transactions.rs
_crates/wallet-kit/src/models/: currency.rs  mod.rs  swap.rs
_crates/wallet-kit/tests/: fee_integration_test.rs
_crates/wallet-network/: Cargo.toml
_crates/wallet-network/src/: model.rs
app/: layout.tsx  page.tsx
crates/: .gitignore  Cargo.toml  uniffi.toml
crates/network/: Cargo.toml
crates/network/src/: lib.rs  model.rs
crates/wallet-core/: Cargo.toml
crates/wallet-core/src/: derive_keypair.rs  import_wallet.rs  lib.rs
crates/wallet-core/src/balance/: mod.rs  sol_balance.rs  spl_token_accounts.rs  spl_token_accounts_for.rs  spl_token_accounts_with_balance.rs  wallet_balance.rs  wallet_balance_aggregate.rs
crates/wallet-core/src/models/: balance.rs  birdeye_price_response.rs  mod.rs
crates/wallet-core/src/price_data/: get_asset_price.rs  get_sol_price.rs  mod.rs
crates/wallet-kit/: .gitignore  Cargo.toml  FEE_SYSTEM.md
crates/wallet-kit-v3/: .gitignore  Cargo.toml  README.md
crates/wallet-kit-v3/src/: derive_keypair.rs  lib.rs  model.rs  response.rs  storage_key.rs
crates/wallet-kit-v3/src/commands/: asset_price.rs  derive_new_account.rs  mod.rs  sol_balance.rs  wallet_balance.rs  wallet_balance_aggregate.rs
crates/wallet-kit-v3/src/models/: balance.rs  mod.rs  network_type.rs  response.rs  storage_key.rs
crates/wallet-kit/examples/: fee_demo.rs  sol_balance.rs  spl_balance.rs
crates/wallet-kit/src/: assets.rs  balance.rs  constants.rs  fee.rs  lib.rs  spl_token.rs  swap.rs  transactions.rs
crates/wallet-kit/src/models/: asset.rs  mod.rs  price.rs  swap.rs
crates/wallet-kit/tests/: fee_integration_test.rs
docs/: IMPLEMENTATION_SUMMARY.md  LANGUAGE_SETTINGS_MIGRATION.md  NAVIGATOR_LANGUAGE_IMPLEMENTATION.md  ONRAMPER_FIXES.md  ONRAMPER_INTEGRATION_SUMMARY.md  TRANSLATION_IMPLEMENTATION_SUMMARY.md  i18n-implementation-complete.md  ios-development-workflow.md  ios-release-appstore.md  publish-macos-appstore.md  release-build.md  release-ios.md  release-keys-and-credentials.md  solana-local-development.md
lib/: commands.ts  helper.ts
scripts/: generate-icon-mobile.sh  publish-android.sh  publish-ios.sh  publish-macos-appstore.sh  test-seeds.txt
src/: App.jsx  App.tsx  LanguageContext.jsx  LanguageContext.tsx  i18n.js  i18n.ts  index.css  main.jsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.prod-android-playstore.conf.json  tauri.prod-ios-appstore.conf.json  tauri.prod-macos-appstore.conf.json  tauri.prod.conf.json
src-tauri/capabilities/: android.json  default.json
src-tauri/gen-override/android/: keystore.properties
src-tauri/gen-override/android/app/: build.gradle.kts
src-tauri/gen-override/android/app/src/main/: AndroidManifest.xml
src-tauri/icons/: icon-debug.icns  icon.icns
src-tauri/src/: lib.rs
src-tauri/src/constants/: address.rs  mod.rs  network.rs  onramp.rs  rpc.rs  store.rs
src-tauri/src/model/: airdrop.rs  client.rs  keypair.rs  mod.rs  onramp.rs  seed.rs  settings_debug.rs
src-tauri/src/network/: airdrop.rs  check_pubkey.rs  client.rs  mod.rs
src-tauri/src/onramp/: commands.rs  mod.rs  stripe.rs
src-tauri/src/settings/: commands.rs
src-tauri/src/setup/: client.rs  commands.rs  mod.rs  store.rs
src-tauri/src/swap/: command_build_swap_transaction.rs  command_get_swap_quote.rs  command_get_verified_assets.rs  command_send_swap_transaction.rs  commands.rs  mod.rs
src-tauri/src/wallet/: check_pubkey.rs  command_balance.rs  command_check_pubkey.rs  command_derive_next_keypair.rs  command_destroy_all_wallets.rs  command_get_all_keypairs.rs  command_get_bach_balance.rs  command_get_sol_balance.rs  command_get_treasury_bach_balance.rs  command_get_treasury_sol_balance.rs  command_import_solana_wallet.rs  command_onboarding_create_wallet.rs  command_other_assets_balance.rs  command_send_token.rs  command_sign_message.rs  command_update_username.rs  command_wallet_token_list.rs  commands.rs  import_wallet.rs  mod.rs  set_active_keypair.rs  sign.rs
watchGarmin/: manifest.xml
watchOSApp/: Project.swift
(+250 files in other folders)
