[package]
name = "smbcloud-wallet-kit-v3"
version = "1.0.0"
edition = "2021"
description = "smbCloud Wallet Kit V3 for NotWallet Crypto non-custodial Solana crypto wallet."
authors = ["Seto Elkahfi <work@setoelkahfi.se>"]
license = "MIT"
homepage = "https://thestablefoundation.org/"
repository = "https://github.com/TheStableFoundation/not/"
documentation = "https://github.com/TheStableFoundation/not/tree/main/docs"
keywords = ["solana", "wallet", "crypto"]
readme = "README.md"

[workspace]
members = ["./wallet-core-model"]

[workspace.dependencies]
smbcloud-wallet-constants = { path = "./wallet-constants" }
smbcloud-wallet-core-network = { path = "./wallet-core-network" }
smbcloud-wallet-core-rpc = { path = "./wallet-core-rpc" }
uniffi = { version = "0.29", features = ["cli", "tokio"] }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "smbcloud_wallet_kit_v3"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
bs58 = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
smbcloud-wallet-constants = { workspace = true }
smbcloud-wallet-core = { path = "./wallet-core" }
smbcloud-wallet-core-http = { path = "./wallet-core-http" }
smbcloud-wallet-core-model = { path = "./wallet-core-model" }
smbcloud-wallet-core-rpc = { workspace = true }
solana-sdk = "3"
uniffi = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[patch.crates-io]
ring = { git = "https://github.com/setoelkahfi/ring.git", branch = "main" }
