[package]
name = "smbcloud-wallet-kit-v3"
version = "1.0.6"
edition = "2021"
description = "smbCloud Wallet Kit V3 for NotWallet Crypto non-custodial Solana crypto wallet."
authors = ["Seto Elkahfi <work@setoelkahfi.se>"]
license = "MIT"
homepage = "https://thestablefoundation.org/"
repository = "https://github.com/TheStableFoundation/notwallet/"
documentation = "https://github.com/TheStableFoundation/notwallet/tree/main/docs"
keywords = ["solana", "wallet", "crypto"]
readme = "README.md"

[workspace]
members = ["./wallet-constants", "./wallet-core*", "./wallet-kit"]

[workspace.dependencies]
log = "0.4.20"
smbcloud-wallet-constants = { version = "1", path = "./wallet-constants" }
smbcloud-wallet-core = { version = "1", path = "./wallet-core" }
smbcloud-wallet-core-http = { version = "1", path = "./wallet-core-http" }
smbcloud-wallet-core-model = { version = "1", path = "./wallet-core-model" }
smbcloud-wallet-core-network = { version = "1", path = "./wallet-core-network" }
smbcloud-wallet-core-rpc = { version = "1", path = "./wallet-core-rpc" }
solana-account-decoder = { version = "3", git = "https://github.com/setoelkahfi/agave", branch = "master" }
solana-client = { version = "3", git = "https://github.com/setoelkahfi/agave", branch = "master" }
solana-pubkey = "3"
solana-rpc-client = { version = "3", git = "https://github.com/setoelkahfi/agave", branch = "master" }
uniffi = { version = "0.29", features = ["cli", "tokio"] }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "smbcloud_wallet_kit_v3"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
bs58 = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
smbcloud-wallet-constants = { workspace = true }
smbcloud-wallet-core = { workspace = true }
smbcloud-wallet-core-http = { workspace = true }
smbcloud-wallet-core-model = { workspace = true }
smbcloud-wallet-core-network = { workspace = true }
smbcloud-wallet-core-rpc = { workspace = true }
solana-sdk = "3"
uniffi = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[patch.crates-io]
ring = { git = "https://github.com/setoelkahfi/ring.git", branch = "main" }
