[package]
name = "notwallet"
version = "1.0.0"
description = "Solana non-custodial wallet, stable coin payment platform, and more 🔐"
authors = ["info@bach.money"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "notwallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
base64 = "0.21"
bip39 = { version = "2", features = ["rand"] }
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }

# Transitive dependencies override.
curve25519-dalek = "4.1.3"
log = "0.4"
network = { path = "./../crates/network" }
openssl = { version = "0.10", features = ["vendored"] }
os_info = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "native-tls-vendored",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = "2.3.1"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-haptics = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.0.0"
tauri-plugin-store = "2"
tauri-plugin-android-tv-check = "1"
thiserror = "1.0"
tsync = "2"
uuid = { version = "1", features = ["v4"] }

# Local crates
wallet_kit = { path = "./../crates/wallet-kit" }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
