[package]
name = "smbcloud-wallet-core-model"
version = "1.0.0"
edition = "2021"
description = "Wallet Core Model"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "smbcloud_wallet_core_model"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uniffi = "0.29"
