[package]
name = "smbcloud-wallet-core-model"
version = "1.0.0"
edition = "2021"
description = "smbCloud Wallet Core Model for NotWallet Crypto."
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "smbcloud_wallet_core_model"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uniffi = "0.29"
smbcloud-wallet-constants = { path = "../wallet-constants" }
smbcloud-wallet-core-network = { path = "../wallet-core-network" }
smbcloud-wallet-core-rpc = { path = "../wallet-core-rpc" }
