[package]
name = "smbcloud-wallet-core-model"
version = "1.0.6"
edition = "2021"
description = "smbCloud Wallet Core Model for NotWallet Crypto."
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "smbcloud_wallet_core_model"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smbcloud-wallet-constants = { workspace = true }
smbcloud-wallet-core-network = { workspace = true }
smbcloud-wallet-core-rpc = { workspace = true }
tsync = "2"
uniffi = { workspace = true }
