[package]
name = "smbcloud-wallet-core-network"
version = "1.0.1"
edition = "2021"
description = "smbCloud Wallet Core Network for NotWallet Crypto."
license = "MIT"

[lib]
crate-type = ["lib"]
name = "smbcloud_wallet_core_network"

[dependencies]
bs58 = "0.5.0"
env_logger = "0.10"
log = "0.4.20"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
strum = "0.27"
strum_macros = "0.27"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tsync = "2"
