[package]
name = "smbcloud-wallet-core-rpc"
version = "1.0.0"
edition = "2021"
description = "smbCloud Wallet Core RPC for NotWallet Crypto."
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "smbcloud_wallet_core_rpc"

[dependencies]
log = "0.4.20"
solana-sdk = "3"
solana-rpc-client = { git = "https://github.com/setoelkahfi/agave", branch = "master" }
solana-pubkey = "3"
solana-account-decoder = { git = "https://github.com/setoelkahfi/agave", branch = "master" }
solana-client = { git = "https://github.com/setoelkahfi/agave", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smbcloud-wallet-core-network = { path = "../wallet-core-network" }
smbcloud-wallet-constants = { path = "../wallet-constants" }
