[package]
name = "smbcloud-wallet-core-rpc"
version = "1.0.4"
edition = "2021"
description = "smbCloud Wallet Core RPC for NotWallet Crypto."
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "smbcloud_wallet_core_rpc"

[dependencies]
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smbcloud-wallet-constants = { workspace = true }
smbcloud-wallet-core-network = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-pubkey = "3"
solana-rpc-client = { workspace = true }
solana-sdk = "3"
