[package]
name = "smbcloud-wallet-core"
version = "1.0.2"
edition = "2021"
description = "smbCloud Wallet Core for NotWallet Crypto."
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "smbcloud_wallet_core"

[dependencies]
bip39 = { version = "2", features = ["rand"] }
bs58 = "0.5.0"
log = "0.4.20"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smbcloud-wallet-constants = { workspace = true }
smbcloud-wallet-core-http = { workspace = true }
smbcloud-wallet-core-model = { workspace = true }
smbcloud-wallet-core-network = { workspace = true }
smbcloud-wallet-core-rpc = { workspace = true }
solana-account-decoder = { git = "https://github.com/setoelkahfi/agave", branch = "master" }
solana-client = { git = "https://github.com/setoelkahfi/agave", branch = "master" }
solana-derivation-path = "3"
solana-pubkey = "3"
solana-rpc-client = { git = "https://github.com/setoelkahfi/agave", branch = "master" }
solana-sdk = "3"
tokio = { version = "1.35.1", features = ["full"] }
