[package]
name = "smbcloud-wallet-kit"
version = "1.0.0"
edition = "2021"
description = "smbCloud Wallet Kit for NotWallet Crypto."
license = "MIT"
[workspace]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "smbcloud_wallet_kit"

[dependencies]
base64 = "0.22"
bincode = "1.3"
bip39 = { version = "2", features = ["rand"] }
bs58 = "0.5.0"
env_logger = "0.10"
log = "0.4.20"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smbcloud-wallet-constants = { path = "../wallet-constants" }
smbcloud-wallet-core = { path = "../wallet-core" }
smbcloud-wallet-core-http = { path = "../wallet-core-http" }
smbcloud-wallet-core-rpc = { path = "../wallet-core-rpc" }
smbcloud-wallet-core-network = { path = "../wallet-core-network" }
smbcloud-wallet-core-model = { path = "../wallet-core-model" }
solana-account-decoder = "2.3.1"
solana-address = "1"
solana-client = "2.3.1"
solana-instruction = "3"
solana-program = "2.3.0"
solana-sdk = "2.3.1"
solana-system-interface = { version = "2", features = ["bincode"] }
spl-associated-token-account = { version = "7", features = ["no-entrypoint"] }
spl-token = { version = "7", features = ["no-entrypoint"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tsync = "2"

[patch.crates-io]
ring = { git = "https://github.com/setoelkahfi/ring.git", branch = "main" }
