[package]
name = "wallet_core"
version = "1.0.0"
edition = "2021"
description = "Wallet Core"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "wallet_core"

[dependencies]
bip39 = { version = "2", features = ["rand"] }
log = "0.4.20"
solana-derivation-path = "3"
solana-sdk = "3"
solana-rpc-client = { git = "https://github.com/setoelkahfi/agave", branch = "master" }
solana-pubkey = "3"
solana-account-decoder = { git = "https://github.com/setoelkahfi/agave", branch = "master" }
solana-client = { git = "https://github.com/setoelkahfi/agave", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
network = { path = "../network" }
constants = { path = "../constants" }
reqwest = { version = "0.12", features = ["json"] }
