[package]
name = "wallet_kit_v3"
version = "0.1.0"
edition = "2021"
description = "Solana toolkit for NotWallet Crypto"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "wallet_kit_v3"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
base64 = "0.22"
bincode = "1.3"
bip39 = { version = "2", features = ["rand"] }
bs58 = "0.5.0"
env_logger = "0.10"
log = "0.4.20"
network = { path = "../network" }
constants = { path = "../constants" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-account-decoder = "3"
solana-address = "1"
solana-client = { git = "https://github.com/setoelkahfi/agave", branch = "master" }
solana-instruction = "3"
solana-program = "3"
solana-sdk = "3"
solana-derivation-path = "3"
solana-system-interface = { version = "2", features = ["bincode"] }
spl-associated-token-account = { git = "https://github.com/solana-program/associated-token-account", branch = "main", features = ["no-entrypoint"] }
spl-token = { version = "8", features = ["no-entrypoint"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tsync = "2"
uniffi = { version = "0.28", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[patch.crates-io]
ring = { git = "https://github.com/setoelkahfi/ring.git", branch = "main" }
