[package]
name = "wallet_kit_v3"
version = "1.0.0"
edition = "2021"
description = "Solana toolkit for NotWallet Crypto"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "wallet_kit_v3"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
wallet_core = { path = "../wallet-core" }
solana-sdk = "3"
uniffi = { version = "0.29", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[patch.crates-io]
ring = { git = "https://github.com/setoelkahfi/ring.git", branch = "main" }
