[package]
name = "wallet_kit_v3"
version = "1.0.0"
edition = "2021"
description = "Solana wallet toolkit for NotWallet Crypto non-custodial Solana crypto wallet."
authors = ["Seto Elkahfi <work@setoelkahfi.se>"]
license = "MIT"
homepage = "https://thestablefoundation.org/"
repository = "https://github.com/TheStableFoundation/not/"
documentation = "https://github.com/TheStableFoundation/not/tree/main/docs"
keywords = ["solana", "wallet", "crypto"]
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "wallet_kit_v3"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
bs58 = "0.5.0"
wallet_core = { path = "../wallet-core" }
constants = { path = "../constants" }
solana-sdk = "3"
uniffi = { version = "0.29", features = ["cli", "tokio"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[patch.crates-io]
ring = { git = "https://github.com/setoelkahfi/ring.git", branch = "main" }
